--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
+
 <body>
 
     <section class="hero">
@@ -23,6 +27,7 @@
                 </ul>
             </div>
         </nav>
+
 
         <div class="content">
             <h4>Hallo, ich bin...</h4>
@@ -41,7 +46,9 @@
             <div class="about-text">
                 <h1>Über mich</h1>
                 <h2>Full Stack Developer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum asperiores aspernatur, numquam consequuntur explicabo veniam pariatur temporibus magni officiis doloremque ipsam ab deserunt! Incidunt accusantium officia numquam perferendis eum sapiente.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum asperiores aspernatur, numquam
+                    consequuntur explicabo veniam pariatur temporibus magni officiis doloremque ipsam ab deserunt!
+                    Incidunt accusantium officia numquam perferendis eum sapiente.</p>
             </div>
         </div>
     </section>
@@ -55,7 +62,7 @@
                 <img src="/images/sprachen/html.png" alt="">
             </div>
             <div class="card flex">
-                    <img src="/images/sprachen/css.png" alt="">
+                <img src="/images/sprachen/css.png" alt="">
             </div>
             <div class="card flex">
                 <img src="/images/sprachen/python.png" alt="">
@@ -78,39 +85,45 @@
         </div>
 
         <div class="container flex">
-			<div class="card">
-				<i class="fas fa-code"></i>
-				<h4>Web Development</h4>
-				<div class="project">
-					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, vero? Quisquam corporis eum sed, officiis necessitatibus impedit! Explicabo illum quasi iste voluptates deserunt ab voluptas quaerat? Tempore hic dolor quos ea tenetur provident iure libero nam eaque quas asperiores</p>
-
-					<p style="text-align: center;">
-						<a class="btn btn-outline" href="#">Projet 1</a>
-					</p>
-				</div>
-			</div>
             <div class="card">
-				<i class="fas fa-code"></i>
-				<h4>Web Development</h4>
-				<div class="project">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, vero? Quisquam corporis eum sed, officiis necessitatibus impedit! Explicabo illum quasi iste voluptates deserunt ab voluptas quaerat? Tempore hic dolor quos ea tenetur provident iure libero nam eaque quas asperiores</p>
+                <i class="fas fa-code"></i>
+                <h4>Web Development</h4>
+                <div class="project">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, vero? Quisquam corporis eum
+                        sed, officiis necessitatibus impedit! Explicabo illum quasi iste voluptates deserunt ab voluptas
+                        quaerat? Tempore hic dolor quos ea tenetur provident iure libero nam eaque quas asperiores</p>
 
-					<p style="text-align: center;">
-						<a class="btn btn-outline" href="#">Projekt 2</a>
-					</p>
-				</div>
-			</div>
+                    <p style="text-align: center;">
+                        <a class="btn btn-outline" href="#">Projet 1</a>
+                    </p>
+                </div>
+            </div>
             <div class="card">
-				<i class="fas fa-code"></i>
-				<h4>Web Development</h4>
-				<div class="project">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, vero? Quisquam corporis eum sed, officiis necessitatibus impedit! Explicabo illum quasi iste voluptates deserunt ab voluptas quaerat? Tempore hic dolor quos ea tenetur provident iure libero nam eaque quas asperiores</p>
+                <i class="fas fa-code"></i>
+                <h4>Web Development</h4>
+                <div class="project">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, vero? Quisquam corporis eum
+                        sed, officiis necessitatibus impedit! Explicabo illum quasi iste voluptates deserunt ab voluptas
+                        quaerat? Tempore hic dolor quos ea tenetur provident iure libero nam eaque quas asperiores</p>
 
-					<p style="text-align: center;">
-						<a class="btn btn-outline" href="#">Projekt 3</a>
-					</p>
-				</div>
-			</div>
+                    <p style="text-align: center;">
+                        <a class="btn btn-outline" href="#">Projekt 2</a>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <i class="fas fa-code"></i>
+                <h4>Web Development</h4>
+                <div class="project">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, vero? Quisquam corporis eum
+                        sed, officiis necessitatibus impedit! Explicabo illum quasi iste voluptates deserunt ab voluptas
+                        quaerat? Tempore hic dolor quos ea tenetur provident iure libero nam eaque quas asperiores</p>
+
+                    <p style="text-align: center;">
+                        <a class="btn btn-outline" href="#">Projekt 3</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -129,18 +142,19 @@
 
                     <label for="country">Land</label>
                     <select id="country" name="country">
-                      <option value="australia">Deutschland</option>
-                      <option value="austria">Östtereich</option>
-                      <option value="switzerland">Schweiz</option>
+                        <option value="australia">Deutschland</option>
+                        <option value="austria">Östtereich</option>
+                        <option value="switzerland">Schweiz</option>
                     </select>
                 </div>
                 <div class="right">
                     <label for="subject">Anliegen</label>
-                    <textarea id="subject" name="subject" placeholder="Beschreibe dein Anliegen.." style="height:100%"></textarea>
+                    <textarea id="subject" name="subject" placeholder="Beschreibe dein Anliegen.."
+                        style="height:100%"></textarea>
                     <input type="submit" value="Submit" class="btn-outline">
                 </div>
-              </form>
-          </div>
+            </form>
+        </div>
     </section>
 
     <footer class="footer">
@@ -168,4 +182,5 @@
     </footer>
 
 </body>
+
 </html>
